--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     
     <h2>4. Notation <h2/>
      <ul>
-       <li><a href= 
+       <li><a href= "media/hymn.dorico">Dorico File</a></li>
+       <li><a href= "media/hymn.xml">XML File</a></li>
+       <li><a href= "media/hymn.mid">MIDI File</a></li>
+       <li><a href= "media/hymn.pdf">PDF File</a></li>
+      </ul>
     
     <h2>5. Synthesis</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/c07ztxal9kE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
