--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <body>
   
     <h1>Alison Holden</h1>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+
     <hr>
     <h2>2. One Minute Story</h2>
     <iframe width="560" height="202" src="https://www.bandlab.com/embed/?id=793b79ad-9733-ed11-b494-000d3a3ee5f3" frameborder="0" allowfullscreen></iframe>
