--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     
     <h2>4. Notation <h2/>
      <ul>
-       <li><a href= "<iframe src="https://baylor.app.box.com/embed/s/nh6jb2pew8c01o08buyyt268vh8p3om7?sortColumn=date&view=list" width="500" height="400" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>">Dorico File</a></li>
-       <li><a href= "<iframe src="https://baylor.app.box.com/embed/s/sahjempzs5on7j9b31oyg4122y3v9apm?sortColumn=date&view=list" width="500" height="400" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>">XML File</a></li>
+       <li><a href= "media/hymn.dorico">Dorico File</a></li>
+       <li><a href= "media/hymn.XML">XML File</a></li>
        <li><a href= "media/hymn.mid">MIDI File</a></li>
        <li><a href= "media/hymn.pdf">PDF File</a></li>
       </ul>
