--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>2. One Minute Story</h2>
     <iframe width="560" height="202" src="https://www.bandlab.com/embed/?id=793b79ad-9733-ed11-b494-000d3a3ee5f3" frameborder="0" allowfullscreen></iframe>
     
-    <h2>4. Notation <h2/>
+    <h2>4. Notation </h2>
      <ul>
        <li><a href= "media/hymn.dorico">Dorico File</a></li>
        <li><a href= "media/hymn.XML">XML File</a></li>
