--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <h2>5. Synthesis</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/c07ztxal9kE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
+    <h2>6. Music Video</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1y7u326ChwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
   </body>
 </html>
